# solve-cifar10

./: .gitignore  README.md  main.py  pyproject.toml  run-jupyter.bat
notebooks/: 0.01-dg-explore-dataset.py  3.01-dg-compare-models.py  trace.json
solve/: dataset.py
solve/modeling/: model.py  train.py
